flutter_plugin/lib/lef_editor_plugin_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Raw Dart FFI bindings for backend/src/api/api.hpp, the LEF Layout Editor
/// C API. Regenerate with `dart run ffigen --config ffigen.yaml` whenever
/// api.hpp changes; never hand-edit this file's output directly.
///
class LefEditorPluginBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  LefEditorPluginBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  LefEditorPluginBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// @brief Allocate a new, empty editor instance (no LEF loaded, no
  /// Design selected, 0x0 viewport). Never returns null.
  ffi.Pointer<LeHandle> le_create() {
    return _le_create();
  }

  late final _le_createPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<LeHandle> Function()>>(
        'le_create',
      );
  late final _le_create = _le_createPtr
      .asFunction<ffi.Pointer<LeHandle> Function()>();

  /// @brief Destroy an instance created by le_create(). Safe to call
  /// with a null handle (no-op), matching free()'s convention. The one
  /// function this header's own thread-safety guarantee doesn't cover -
  /// the handle's mutex is destroyed along with everything else, so it
  /// can't protect this call itself. The caller must ensure no other
  /// thread is still calling into this handle when le_destroy() runs
  /// (the same standard contract as destroying any C++ object with
  /// live references elsewhere - not a new constraint this introduces).
  void le_destroy(ffi.Pointer<LeHandle> handle) {
    return _le_destroy(handle);
  }

  late final _le_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<LeHandle>)>>(
        'le_destroy',
      );
  late final _le_destroy = _le_destroyPtr
      .asFunction<void Function(ffi.Pointer<LeHandle>)>();

  /// @brief Read a LEF file into this handle's shared Root, deriving a
  /// library name from the file's stem. Safe to call multiple times on
  /// the same handle - e.g. a tech file (LAYER definitions, no macros)
  /// followed by one or more macro files that reference those layers by
  /// name, matching LEFReader::read_lef's own existing-Technology reuse
  /// (pass the tech file first when a macro file depends on it - see
  /// render_preview.cpp for the same convention already used there).
  /// Returns 0 on success, matching LEFReader::read_lef's own result
  /// code (nonzero otherwise, including if handle or path is null).
  int le_read_lef(ffi.Pointer<LeHandle> handle, ffi.Pointer<ffi.Char> path) {
    return _le_read_lef(handle, path);
  }

  late final _le_read_lefPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<LeHandle>, ffi.Pointer<ffi.Char>)
        >
      >('le_read_lef');
  late final _le_read_lef = _le_read_lefPtr
      .asFunction<int Function(ffi.Pointer<LeHandle>, ffi.Pointer<ffi.Char>)>();

  /// @brief Total number of error/warning/info messages produced by
  /// this handle's backend operations so far (currently just
  /// le_read_lef() - file-open/parse errors, parser warnings, parser
  /// info notes, and a success summary, each already formatted with
  /// its own "ERROR "/"WARNING "/"INFO " prefix). Monotonically
  /// increasing - entries are never removed, cleared, or reordered -
  /// so a caller can poll this like le_selection_version() and only
  /// fetch le_message_at() for indices at or past what it last saw,
  /// rather than re-reading everything on every check. 0 if handle is
  /// null.
  int le_message_count(ffi.Pointer<LeHandle> handle) {
    return _le_message_count(handle);
  }

  late final _le_message_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<LeHandle>)>>(
        'le_message_count',
      );
  late final _le_message_count = _le_message_countPtr
      .asFunction<int Function(ffi.Pointer<LeHandle>)>();

  /// @brief The message at `index` (0..le_message_count()-1). Returns
  /// null if handle is null or index is out of range. The returned
  /// pointer is owned by the handle - valid until the handle is
  /// destroyed (messages are never removed/reordered, so unlike a
  /// "last error" design this pointer is never invalidated by a later
  /// le_read_lef() call).
  ffi.Pointer<ffi.Char> le_message_at(ffi.Pointer<LeHandle> handle, int index) {
    return _le_message_at(handle, index);
  }

  late final _le_message_atPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<LeHandle>, ffi.Int32)
        >
      >('le_message_at');
  late final _le_message_at = _le_message_atPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<LeHandle>, int)>();

  /// @brief Number of Designs currently loaded across every LEF file
  /// read into this handle so far. 0 if handle is null.
  int le_design_count(ffi.Pointer<LeHandle> handle) {
    return _le_design_count(handle);
  }

  late final _le_design_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<LeHandle>)>>(
        'le_design_count',
      );
  late final _le_design_count = _le_design_countPtr
      .asFunction<int Function(ffi.Pointer<LeHandle>)>();

  /// @brief Name of the Design at `index` (0..le_design_count()-1).
  /// Returns null if handle is null or index is out of range. The
  /// returned pointer is owned by the handle's Root - valid until the
  /// handle is destroyed (no Design-removal API exists yet), never
  /// owned by the caller.
  ffi.Pointer<ffi.Char> le_design_name(
    ffi.Pointer<LeHandle> handle,
    int index,
  ) {
    return _le_design_name(handle, index);
  }

  late final _le_design_namePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<LeHandle>, ffi.Int32)
        >
      >('le_design_name');
  late final _le_design_name = _le_design_namePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<LeHandle>, int)>();

  /// @brief Select the Design at `index` as the one le_render_pixel_buffer()
  /// renders (its Abstract view). Returns 0 on success, nonzero if
  /// handle is null or index is out of range - the current selection is
  /// left unchanged on failure.
  int le_set_current_design(ffi.Pointer<LeHandle> handle, int index) {
    return _le_set_current_design(handle, index);
  }

  late final _le_set_current_designPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<LeHandle>, ffi.Int32)>
      >('le_set_current_design');
  late final _le_set_current_design = _le_set_current_designPtr
      .asFunction<int Function(ffi.Pointer<LeHandle>, int)>();

  /// @brief Number of Libraries currently loaded - one per le_read_lef()
  /// call so far (see its own comment: each derives a fresh Library from
  /// its file's stem). 0 if handle is null. The top level of a
  /// Library -> Design -> Abstract browser widget; see
  /// le_library_design_count()/le_library_design_at() for the next level.
  int le_library_count(ffi.Pointer<LeHandle> handle) {
    return _le_library_count(handle);
  }

  late final _le_library_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<LeHandle>)>>(
        'le_library_count',
      );
  late final _le_library_count = _le_library_countPtr
      .asFunction<int Function(ffi.Pointer<LeHandle>)>();

  /// @brief The Library at `index` (0..le_library_count()-1). An
  /// all-invalid/null row (id.index == UINT32_MAX, name == null) if
  /// handle is null or index is out of range, rather than crashing.
  LeLibraryInfo le_library_at(ffi.Pointer<LeHandle> handle, int index) {
    return _le_library_at(handle, index);
  }

  late final _le_library_atPtr =
      _lookup<
        ffi.NativeFunction<
          LeLibraryInfo Function(ffi.Pointer<LeHandle>, ffi.Int32)
        >
      >('le_library_at');
  late final _le_library_at = _le_library_atPtr
      .asFunction<LeLibraryInfo Function(ffi.Pointer<LeHandle>, int)>();

  /// @brief Number of Designs belonging to the Library at
  /// `library_index` (into the same enumeration le_library_at() uses).
  /// 0 if handle is null or library_index is out of range.
  int le_library_design_count(ffi.Pointer<LeHandle> handle, int library_index) {
    return _le_library_design_count(handle, library_index);
  }

  late final _le_library_design_countPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<LeHandle>, ffi.Int32)>
      >('le_library_design_count');
  late final _le_library_design_count = _le_library_design_countPtr
      .asFunction<int Function(ffi.Pointer<LeHandle>, int)>();

  /// @brief The Design at `design_index` within the Library at
  /// `library_index` (0..le_library_design_count(library_index)-1). An
  /// all-invalid/null row if handle is null or either index is out of
  /// range, rather than crashing.
  LeDesignInfo le_library_design_at(
    ffi.Pointer<LeHandle> handle,
    int library_index,
    int design_index,
  ) {
    return _le_library_design_at(handle, library_index, design_index);
  }

  late final _le_library_design_atPtr =
      _lookup<
        ffi.NativeFunction<
          LeDesignInfo Function(ffi.Pointer<LeHandle>, ffi.Int32, ffi.Int32)
        >
      >('le_library_design_at');
  late final _le_library_design_at = _le_library_design_atPtr
      .asFunction<LeDesignInfo Function(ffi.Pointer<LeHandle>, int, int)>();

  /// @brief Select a Design by its stable LeDesignId (e.g. one read from
  /// le_library_design_at()'s LeDesignInfo::id) as the one
  /// le_render_pixel_buffer() renders, same effect as
  /// le_set_current_design() but addressed by identity instead of a
  /// position in the flat le_design_count() list - the natural fit for a
  /// browser widget's row click, which already has the Design's
  /// LeDesignId on hand and shouldn't need to re-derive a flat index for
  /// it. Returns 0 on success, nonzero if handle is null or design_id
  /// doesn't name a Design currently loaded on this handle - the current
  /// selection is left unchanged on failure.
  int le_set_current_design_by_id(
    ffi.Pointer<LeHandle> handle,
    LeDesignId design_id,
  ) {
    return _le_set_current_design_by_id(handle, design_id);
  }

  late final _le_set_current_design_by_idPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<LeHandle>, LeDesignId)>
      >('le_set_current_design_by_id');
  late final _le_set_current_design_by_id = _le_set_current_design_by_idPtr
      .asFunction<int Function(ffi.Pointer<LeHandle>, LeDesignId)>();

  /// @brief Look up the Design named `name` (exact match) on this
  /// handle - lets a caller resolve a name straight to a LeDesignId
  /// (e.g. for le_set_current_design_by_id) without walking the flat
  /// le_library_design_at() enumeration by hand (UPDATES.md item 17's
  /// `open_design <name>`). Returns an invalid id (index == UINT32_MAX)
  /// if handle or name is null, or no Design with that name is loaded
  /// on this handle.
  LeDesignId le_design_by_name(
    ffi.Pointer<LeHandle> handle,
    ffi.Pointer<ffi.Char> name,
  ) {
    return _le_design_by_name(handle, name);
  }

  late final _le_design_by_namePtr =
      _lookup<
        ffi.NativeFunction<
          LeDesignId Function(ffi.Pointer<LeHandle>, ffi.Pointer<ffi.Char>)
        >
      >('le_design_by_name');
  late final _le_design_by_name = _le_design_by_namePtr
      .asFunction<
        LeDesignId Function(ffi.Pointer<LeHandle>, ffi.Pointer<ffi.Char>)
      >();
